<resources>
    <!-- Title bar text -->
    <string name="app_name">PayNa</string>

    <!-- Expense types -->
    <string name="exp_type0">General</string>
    <string name="exp_type1">Food</string>
    <string name="exp_type2">Bills</string>
    <string name="exp_type3">Debt</string>
    <string name="exp_type4">Education</string>

    <string-array name="the_keys">
        <item>Default</item>
        <item>Name</item>
        <item>Type</item>
        <item>Regret Level</item>
    </string-array>

    <string-array name="types">
        <item>@string/exp_type0</item>
        <item>@string/exp_type1</item>
        <item>@string/exp_type2</item>
        <item>@string/exp_type3</item>
        <item>@string/exp_type4</item>
    </string-array>

    <string-array name="regret_levels">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="procedures">
        <item>Take Photo</item>
        <item>Choose</item>
    </string-array>

    <string name="peso_sign">₱</string>
    <string name="your_profile">Dashboard</string>
    <string name="expense_list">History</string>
    <string name="warning_if_empty_1">Nothing to see here yet.</string>
    <string name="title_2">Recent</string>
    <string name="warning_if_empty_2">Nothing to see here yet.</string>
    <string name="label_1">avg. daily expenses</string>
    <string name="satisfaction">satisfaction level</string>
    <string name="expenses">Expenses</string>
    <string name="warning_if_empty_3">You have not added any expenses yet.\n\nTap on the \'+\' button to get started.</string>
    <string name="seamless_vibration_time">Vibration Time When Notified</string>
    <string name="condition">Not applied if set date or time has already passed</string>
    <string name="seconds">seconds</string>
    <string name="name">Name *</string>
    <string name="type">Type *</string>
    <string name="regret_level">Regret Level *</string>
    <string name="cost">Cost *</string>
    <string name="date_time">Date/Time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="update_text">Update</string>
    <string name="filter_expenses_by">Filter Expenses by:</string>
    <string name="future_expenses_t">Future Expenses</string>
    <string name="change_receipt_prompt">+ Change Receipt</string>
    <string name="add_receipt_text">+ Add Receipt</string>

</resources>
