<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.EditExpenseActivity">

    <RelativeLayout
        android:id="@+id/mainLogo_2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher_foreground" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLogo_2"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/name_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/name"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextDark"
                    android:textSize="20sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/type_and_regret_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_ll"
                android:layout_marginBottom="25dp">

                <LinearLayout
                    android:id="@+id/type_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15sp"
                        android:layout_marginTop="15sp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/type"
                        android:textColor="@color/colorTextDark"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/types"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_toEndOf="@id/type_ll"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/regret_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15sp"
                            android:layout_marginEnd="10sp"
                            android:layout_marginTop="15sp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/regret_level"
                            android:textColor="@color/colorTextDark"
                            android:textSize="14sp" />

                        <ImageButton
                            android:id="@+id/info_btn"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/regret_title"
                            android:background="@drawable/custom_ripple_3"
                            android:elevation="0dp"
                            android:onClick="accessLvlRegretInfo"
                            android:scaleType="fitXY"
                            android:src="@android:drawable/ic_menu_info_details"
                            android:tint="@color/colorLight1" />
                    </RelativeLayout>

                    <Spinner
                        android:id="@+id/regret_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/regret_levels"></Spinner>

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cost_and_datetime_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/type_and_regret_rl"
                android:layout_marginBottom="25dp">

                <LinearLayout
                    android:id="@+id/cost_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15sp"
                        android:layout_marginTop="15sp"
                        android:fontFamily="@font/montserrat"

                        android:text="@string/cost"
                        android:textColor="@color/colorTextDark"
                        android:textSize="14sp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/peso_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/peso_sign"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/peso_symbol"
                            android:ems="5"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:textColor="@color/colorTextDark"
                            android:textSize="20sp" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_toEndOf="@id/cost_ll"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15sp"
                        android:layout_marginTop="15sp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/date_time"
                        android:textColor="@color/colorTextDark"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/datetime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:focusable="false"
                        android:maxLines="1"
                        android:onClick="triggerDateTimePicker"
                        android:textColor="@color/colorTextDark"

                        android:textSize="20sp" />

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/vibration_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cost_and_datetime_rl"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/seamless_vibration_time"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condition"
                    android:textColor="@color/colorTextDark"
                    android:textSize="10sp"
                    android:textStyle="italic" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5sp">

                    <EditText
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="3"
                        android:enabled="false"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/time"
                        android:text="@string/seconds"
                        android:textColor="@color/colorTextDark"
                        android:textSize="12sp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/receipt_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vibration_ll"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="5sp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/takePhoto_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/colorWhite"
                        android:onClick="prompt"
                        android:padding="10dp"
                        android:text="+ Add Receipt"
                        android:textColor="@color/colorHeavy1"
                        android:textSize="14sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/image_receipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="5sp"
                    android:adjustViewBounds="true"
                    android:src="?android:attr/colorButtonNormal" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/receipt_ll"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="5sp">

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_ripple_1"
                    android:onClick="deleteExpense"
                    android:text="@string/delete"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7sp"
                    android:layout_toStartOf="@id/saveBtn"
                    android:background="@drawable/custom_ripple"
                    android:onClick="revertBack"
                    android:text="@string/cancel"
                    android:textColor="@color/colorTextDark" />

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/custom_ripple"
                    android:enabled="false"
                    android:onClick="saveInformation"
                    android:text="@string/save"
                    android:textColor="@color/colorHeavy1" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>