<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll1"
        android:background="@color/colorHeavy2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:src="@mipmap/ic_launcher_foreground"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/colorHeavy2"
        android:layout_below="@id/ll1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/ll1.1">

            <TextView
                android:id="@+id/avgCostText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="₱ --.--"
                android:textColor="@color/colorLight1"
                android:textStyle="bold"
                android:textSize="36sp"
                android:maxLines="1"
                />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/label_1"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@color/colorHeavy1"
            android:layout_below="@id/ll1.1">

        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_below="@id/ll1.1"
            android:paddingBottom="10sp">

            <TextView
                android:id="@+id/satisfactionText"
                android:layout_marginStart="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="-.--%"
                android:textColor="@color/colorLight1"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/satisfaction"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:gravity="end"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll3"
        android:layout_below="@id/ll2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heading1"
            android:text="Future Expenses"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/future_expense_rarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            >


        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/noexpensefuture_added"
        android:layout_below="@id/ll3"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning_if_empty_1"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noexpensefuture_added"
        android:id="@+id/ll5"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_2"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll5"
        android:id="@+id/noexpense_added">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/warning_if_empty_2"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/expense_history_rarea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5sp"
        android:layout_below="@id/ll5"
        >
    </android.support.v7.widget.RecyclerView>


</RelativeLayout>